# jax-monohull-dynamics

./: README.md  pyproject.toml  requirements.txt
demo/: demo.py
dynamics/: particle.py
forces/: boat.py  foils.py  force_utils.py  hull.py  sails.py
forces/polars/: polar.py
forces/polars/n12/: xf-n0012-il-100000-n5.csv  xf-n0012-il-50000-n5.csv
src/forces/: boat.py  foils.py  hull.py  sails.py
src/forces/polars/: polar.py
src/monohull_dynamics/demo/: demo.py  overlays.py
src/monohull_dynamics/dynamics/: boat.py  boat_wind_interaction.py  implicit_integration.py  integration_utils.py  particle.py  wind.py
src/monohull_dynamics/forces/: boat.py  foils.py  force_utils.py  hull.py  sails.py
src/monohull_dynamics/forces/polars/: polar.py
src/monohull_dynamics/forces/polars/n12/: xf-n0012-il-200000-n5.csv
tests/: demo_boat_wind_interaction.py  demo_e2e_wind.py  integrator_convergence.py  test_boat_wind_interaction.py  test_e2e.py  test_foils.py  test_force_utils.py  test_hull.py  test_integrator.py  test_polar.py  test_sail.py  test_wind.py
