[project]
name = "monohull_dynamics"
version = "0.0.1"
authors = [
  { name="hctomkins"},
]
description = "Dynamic simulation of sailing monohulls"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools >= 73.0"]
build-backend = "setuptools.build_meta"


[project.scripts]
my-client = "monohull_dynamics.demo.demo:run_demo"