[project]
name = "monohull_dynamics"
version = "1.0.1"
authors = [
  { name="hctomkins"},
]
description = "Dynamic simulation of sailing monohulls"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools >= 73.0"]
build-backend = "setuptools.build_meta"


[project.scripts]
my-client = "monohull_dynamics.demo.demo:run_demo"

[tool.ruff]
exclude = ["__pycache__", ".git", ".idea", ".vscode", "build", "dist", "docs", "htmlcov", "notebooks", "tests", "venv"]
line-length = 150

[tool.ruff.lint]
fixable = ["E","F","I","N","W"]
ignore = ["E401", "E741"]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = []